# trendline

./: .gitignore  CHANGELOG.md  README.md  TODO.md  package-lock.json  package.json  svelte.config.js  vite.config.js
.github/workflows/: tauri-build.yml
src/: README.md  app.css  app.html  armplot.js  desc.html  desc.js  fftgraphs.html  field.html  field.js  index.html  main.js  power.html  power.js  serial.html  serial.js  stream1.html  stream1.js  styles.css  uplot.js
src-tauri/: Cargo.toml  README.md  build.rs  package-lock.json  package.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  trendline.icns
src-tauri/src/: app_state.rs  armstrong.yaml  cli.rs  connect.rs  device.rs  discover.rs  lib.rs  main.rs  menu.rs  sample.yaml  shared.rs  util.rs
src-tauri/src/commands/: capture.rs  export.rs  mod.rs  pipeline.rs  port.rs  settings.rs
src-tauri/src/pipeline/: buffer.rs  decimation.rs  detrend.rs  fft.rs  manager.rs  mod.rs  passthrough.rs  statistics.rs
src-tauri/src/proxy/: discovery.rs  mod.rs  port_manager.rs
src-tauri/src/state/: capture.rs  decimation.rs  detrend.rs  mod.rs  proxy_register.rs
src-tauri/src/utils/: mod.rs  range.rs  serials.rs  tio_proxy.rs
src/FFTGraphs/: fft.html  fftgraphs.html  pump1.html  pump2.html  sample.html
src/lib/: utils.ts
src/lib/bindings/: ColumnMeta.ts  ColumnStatistics.ts  DataColumnId.ts  DecimationMethod.ts  DetrendMethod.ts  DeviceMeta.ts  FeColumnInfo.ts  FeDeviceMeta.ts  FeStreamInfo.ts  FftConfig.ts  HealthSet.ts  MetadataEpoch.ts  MetadataFilter.ts  PipelineId.ts  PlotData.ts  PortInfo.ts  PortState.ts  RpcError.ts  RpcErrorCode.ts  RpcErrorPayload.ts  RpcMeta.ts  SegmentMeta.ts  SharedPlotConfig.ts  SinglePlotPoint.ts  StatisticSet.ts  StreamMeta.ts  StreamStatistics.ts  StreamStats.ts  TimeseriesConfig.ts  UiDevice.ts  UiStream.ts  ViewConfig.ts
src/lib/components/: ChartControls.svelte  DataPlot.svelte  DeviceControls.svelte  DeviceInfoHoverCard.svelte  DeviceListItem.svelte  DeviceSelector.svelte  LiveChart.svelte  MainView.svelte  MenubarHeader.svelte  StatusFooter.svelte  UplotChart.svelte
src/lib/components/chart-area/: ChartControls.svelte  ChartView.svelte  DeviceChartSection.svelte  DeviceControls.svelte  PlotControls.svelte  PlotHeader.svelte  PlotSettings.svelte  SingleChart.svelte  SplitButton.svelte  UPlotComponent.svelte
src/lib/components/device-controls/: DeviceControls.svelte
src/lib/components/device-select/: DeviceInfoHoverCard.svelte  DeviceList.svelte  DeviceSelectorDialog.svelte
src/lib/states/: README.md  chartState.svelte.ts  deviceState.svelte.ts  ioState.svelte.ts  streamMonitorState.svelte.ts  uiState.svelte.ts
src/lib/stores/: README.md  chart.store.svelte.ts  device.store.svelte.ts  io.store.svelte.ts  ui.store.svelte.ts
src/routes/: +layout.svelte  +page.svelte
(+20 files in other folders)
