[package]
name = "trendline"
version = "0.1.0"
description = "Sensor graphical analysis app"
authors = ["Ilysia Krzywonos"]
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "2.1.1", features = ["unstable"] }
tauri-plugin-shell = "2"
crossbeam = "0.8.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
twinleaf = "1.2.0"
getopts = "0.2"
welch-sde = "0.1.0"
serde_yaml = "0.9.34"
serialport = "4.7.0"
chrono = "0.4.39"
rustfft = "6.2.0"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }




