[package]
name = "trendline"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "trendline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9.1"
serialport = "4.5.1"
crossbeam = "0.8.4"
ts-rs = "11.0.1"
sysinfo = "0.35.2"
twinleaf-tools = { path = "../../twinleaf-rust/twinleaf-tools" }
twinleaf = { version = "1.3.1", path = "../../twinleaf-rust/twinleaf" }
