[package]
name = "trendline"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "trendline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9.1"
serialport = "4.5.1"
crossbeam = "0.8.4"
ts-rs = { version = "11.0.1", features = ["uuid-impl"] }
sysinfo = "0.35.2"
twinleaf-tools = "1.5.1"
twinleaf = "1.3.3"
dashmap = "6.1.0"
tauri-plugin-dialog = "2"
rustfft = "6.4.0"
welch-sde = "0.1.0"
num_enum = "0.7.4"
nalgebra = "0.33.2"
rayon = "1.10.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-prevent-default = "3"
csv = "1.3.1"

[profile.release]
debug = true
